src/objects/M_E_Metric_Data__c.object
<CustomObject>
    <description>Quarterly Data for M&amp;E Metrics</description>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <description>The actual value for this metric. This will usually be calculated, but may be entered manually for some metrics</description>
        <inlineHelpText>The actual value for this metric. This will usually be calculated, but may be entered manually for some metrics</inlineHelpText>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comment for this particular metric for this quarter</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date of the quarter to which this metric belongs</description>
        <inlineHelpText>This can simply be any date falling in the quarter to which this metric belongs. We shall calculate the quarter dynamically. It defaults to the current date.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denumerator__c</fullName>
        <description>The Denumerator for the on the fly calculation</description>
        <label>Denumerator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>The district that this metric is for. Allows us to split the metrics by district when showing them on the dashboard</description>
        <inlineHelpText>Select the district that this metric is for</inlineHelpText>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>M&amp;E Metric Data</relationshipLabel>
        <relationshipName>M_E_Metric_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Cumulative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this is a cumulative metric</description>
        <label>Is Cumulative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_E_Metric__c</fullName>
        <description>The Metric to which this data belongs</description>
        <inlineHelpText>The Metric to which this data belongs</inlineHelpText>
        <label>M&amp;E Metric</label>
        <referenceTo>M_E_Metric__c</referenceTo>
        <relationshipLabel>M&amp;E Metric Data</relationshipLabel>
        <relationshipName>M_E_Metric_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Value__c</fullName>
        <description>Manually set value for a metric. Will override the actual value in display</description>
        <label>Manual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numerator__c</fullName>
        <description>Numerator for the on the fly calc</description>
        <label>Numerator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The person that this metric data belongs to</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>M&amp;E Metric Data</relationshipLabel>
        <relationshipName>M_E_Metric_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The projected value for this metric for the given quarter. Should be entered manually.</description>
        <inlineHelpText>The projected value for this metric for the given quarter. Should be entered manually.</inlineHelpText>
        <label>Projected Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Value__c</fullName>
        <formula>IF( OR(ISNULL(Manual_Value__c),  ISBLANK(Manual_Value__c) ) ,  Actual_Value__c ,  Manual_Value__c)</formula>
        <label>Real Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <label>Subcounty</label>
        <referenceTo>Subcounty__c</referenceTo>
        <relationshipLabel>M&amp;E Metric Data</relationshipLabel>
        <relationshipName>M_E_Metric_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>M&amp;E Metric Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>M_E_Metric__c</columns>
        <columns>Date__c</columns>
        <columns>Projected_Value__c</columns>
        <columns>Actual_Value__c</columns>
        <columns>Manual_Value__c</columns>
        <columns>Real_Value__c</columns>
        <columns>District__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Metric Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;E Metric Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>